--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}Aboutut{% endblock %}
+{% block title %}About{% endblock %}
 
 {% block content %}
-<div class="col-lg-12 text-center">
-    <p class="lead text-center">This project was written by Joel Lawrence and Deepansh Singh</p>
+<div class="row">
+    <div class="col-lg-12 text-center">
+        <p class="lead text-center">This project was written by Joel Lawrence and Deepansh Singh</p>
+    </div>
 </div>
 {% endblock %}
