--- a/templates/bad.html
+++ b/templates/bad.html
@@ -3,7 +3,9 @@
 {% block title %}Bad Request{% endblock %}
 
 {% block content %}
-<div class="col-lg-12 text-center">
-    <p class="lead text-center">404 Error: Bad Request</p>
+<div class="row">
+    <div class="col-lg-12 text-center">
+        <p class="lead text-center">404 Error: Bad Request</p>
+    </div>
 </div>
 {% endblock %}
