--- a/Frontend_future_plan/templates/result.html
+++ b/Frontend_future_plan/templates/result.html
@@ -30,7 +30,7 @@
                       <tr>
                         <th scope="row">{{ user }}</th>
                         <td>{{ movie }}</td>
-                        <td>X</td>
+                        <td>{{ rating }}</td>
                         <td>Predicted</td>
                       </tr>
             </table>      
